fix h2 console